--- a/app/src/main/res/layout/activity_todo_collections.xml
+++ b/app/src/main/res/layout/activity_todo_collections.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eu.lucasblommers.todoapp.TodoActivity"
+    tools:context="eu.lucasblommers.todoapp.activities.TodoCollectionActivity"
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnCreateCollectionActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/create_collection" />
