--- a/app/src/main/res/layout/activity_create_todo_collection.xml
+++ b/app/src/main/res/layout/activity_create_todo_collection.xml
@@ -25,7 +25,7 @@
             android:id="@+id/etCollectionTitle"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="@string/title" />
+            android:hint="@string/title" />
 
         <View
             android:layout_width="0dp"
